[package]
edition = "2024"
name = "tst_rust"
version = "0.1.0"
license = "MIT or Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
critical-section = "1.2"
defmt = "1"
defmt-rtt = "1"
usb-device = "0.3"
usbd-serial = "0.2.2"
heapless = "0.9.2"
typed-fsm = "0.4.7" 

# HAL and Bootloader for RP2350
rp235x-hal = { version = "0.3", features = ["rt", "critical-section-impl"] }

# Panic handlers (conditional by target architecture)
[target.'cfg( target_arch = "arm" )'.dependencies]
panic-probe = { version = "1", features = ["print-defmt"] }

[target.'cfg( target_arch = "riscv32" )'.dependencies]
panic-halt = { version = "1.0.0" }

# Linker scripts and rustflags
[target.thumbv8m.main-none-eabihf]
rustflags = [
    "-C", "link-arg=--nmagic",
    "-C", "link-arg=-Tlink.x",
    "-C", "link-arg=-Tdefmt.x",
    "-C", "target-cpu=cortex-m33",
]